services/_kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
spec:
  rules:
  - http:
      paths:
      - path: /api/videos
        pathType: ImplementationSpecific
        backend:
          service:
            name: videos-service
            port:
              number: 80
      - path: /api/chat
        pathType: ImplementationSpecific
        backend:
          service:
            name: chat-service
            port:
              number: 80
      - path: /api/users
        pathType: ImplementationSpecific
        backend:
          service:
            name: users-service
            port:
              number: 80
      - path: /api/rooms
        pathType: ImplementationSpecific
        backend:
          service:
            name: rooms-service
            port:
              number: 80
